--- a/templates/chat.html
+++ b/templates/chat.html
@@ -11,17 +11,17 @@
   <body>
     <div class="container">
   <div class="jumbotron">
-        <h2>Добро пожаловать в чат!</h2>
+        <h2>Welcome to chat!</h2>
         <div class="message_holder" style="max-height: 300px; overflow: auto;"></div>
   </div>
   <div class="row marketing">
       <div class="col-lg-12">
         <form action="" method="POST">
-          <input type="text" class="username form-control" placeholder="Имя">
+          <input type="text" class="username form-control" placeholder="Name">
           <br>
-          <input type="text" class="message form-control" placeholder="Сообщение">
+          <input type="text" class="message form-control" placeholder="Message">
           <br>
-          <button type="submit" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-send"></span> Отправить</button>
+          <button type="submit" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-send"></span> Send</button>
         </form>
       </div>
 
